--- a/app/scheduler/subarray-resources/subarray-resources.html
+++ b/app/scheduler/subarray-resources/subarray-resources.html
@@ -120,7 +120,7 @@
 
                     <div flex layout="column" layout-wrap style="overflow-y: auto">
                         <div style="max-height: 52px; position: relative" flex="25" class="resource-item" layout="row" layout-align="start center"
-                            ng-repeat="resourceAlloc in vm.subarray.allocations" ng-class="parent.vm.classForResource(resourceAlloc[0])">
+                            ng-repeat="resourceAlloc in parent.vm.sensorValues[vm.subarray.name + '_allocations'].parsedValue" ng-class="parent.vm.classForResource(resourceAlloc[0])">
                             <span flex style="font-size: 18px; margin-left: 4px; margin-bottom: 12px" class="resource-name-text">{{resourceAlloc[0]}}</span>
                             <span style="position: absolute; left: 8px; bottom: 4px; font-size: 12px">{{parent.vm.sensorValues[resourceAlloc[0] + '_state'].value}}</span>
                             <div flex layout="column" layout-wrap class="gui-urls-link-container">
