--- a/app/gui-links/gui-links.html
+++ b/app/gui-links/gui-links.html
@@ -5,15 +5,16 @@
         <span class="fa fa-refresh subarray-action-icon hover-opacity" style="height: auto" md-ink-ripple
             title="Refresh GUI Links sensors" ng-click="vm.refreshGuiLinks()"></span>
         <div layout="row" style="position: absolute; left: 8px; bottom: 0" class="subheader-text">
-            <div style="min-width: 350px; margin: 0 8px">Sensor Name</div>
+            <div style="min-width: 450px; margin: 0 8px">Sensor Name</div>
             <div style="padding: 0 8px; min-width: 200px">Links</div>
         </div>
     </md-toolbar>
     <div flex class="md-whiteframe-z1" style="overflow: auto; min-height: 100%">
-        <div ng-repeat="(key, sensor) in vm.sensorValues track by $index" layout="row" layout-align="start center" style="padding: 0 8px; min-height: 28px" class="device-status-row-item">
-            <div style="min-width: 350px; margin: 0 8px" title="{{key}}">{{key}}</div>
+        <div ng-repeat="key in $root.objectKeys(vm.sensorValues) | orderBy:key track by $index" layout="row" layout-align="start center"
+            style="padding: 0 8px; min-height: 28px" class="device-status-row-item">
+            <div style="min-width: 450px; margin: 0 8px" title="{{vm.sensorValues[key].original_name}}">{{vm.sensorValues[key].original_name}}</div>
             <div layout="row" flex style="">
-                <a flex ng-repeat="link in sensor.value track by $index" href="{{link.href}}" title="{{link.description}}"
+                <a flex ng-repeat="link in vm.sensorValues[key].parsedValue track by $index" target="_blank" href="{{link.href}}" title="{{link.description}}"
                     style="padding: 0 8px; min-width: 150px">{{link.title}}</a>
             </div>
         </div>
