--- a/app/sensor-groups/sensor-groups.html
+++ b/app/sensor-groups/sensor-groups.html
@@ -50,12 +50,12 @@
             <div flex class="overlay-progress-circular" layout="row" layout-align="center center" ng-if="vm.showProgress">
                 <md-progress-circular md-mode="indeterminate"></md-progress-circular>
             </div>
-            <div ng-repeat="sensor in sensors = (vm.sensorsToDisplay | filter:vm.filterByNotNominal | regexSearch:vm.sensorsOrderByFields:vm.q | orderBy:vm.sensorsOrderBy.value:vm.sensorsOrderBy.reverse) track by $index" class="resource-sensor-item"
+            <div ng-repeat="sensor in sensors = (vm.subscribedSensors | filter:vm.filterByNotNominal | regexSearch:vm.sensorsOrderByFields:vm.q | orderBy:vm.sensorsOrderBy.value:vm.sensorsOrderBy.reverse) track by $index" class="resource-sensor-item"
                 ng-class="{'selected-for-chart-row': sensor.selectedForChart}" layout="row" layout-align="start center">
-                <span title="{{sensor.python_identifier + ' - Description: ' + sensor.description + ' - Units: ' + sensor.units + ' - Type: ' + sensor.type}}" class="resource-sensor-name">{{sensor.name}}</span>
-                <span class="resource-sensor-status-item" ng-class="vm.sensorClass(sensor.status)">{{sensor.status}}</span>
-                <span class="resource-sensor-time-item">{{sensor.received_timestamp}}</span>
-                <span title="{{sensor.value}}" class="resource-sensor-value-item" ng-click="vm.displaySensorValue($event, sensor); $event.stopPropagation();">{{sensor.value}}</span>
+                <span title="{{sensor.original_name + ' - Description: ' + sensor.description + ' - Units: ' + sensor.units + ' - Type: ' + sensor.type}}" class="resource-sensor-name">{{sensor.original_name}}</span>
+                <span class="resource-sensor-status-item" ng-class="vm.sensorClass(sensor.status)">{{vm.sensorValues[sensor.name].status}}</span>
+                <span class="resource-sensor-time-item">{{vm.sensorValues[sensor.name].date}}</span>
+                <span title="{{vm.sensorValues[sensor.name].value}}" class="resource-sensor-value-item" ng-click="vm.displaySensorValue($event, vm.sensorValues[sensor.name]); $event.stopPropagation();">{{vm.sensorValues[sensor.name].value}}</span>
 
             </div>
         </div>
