updated video display to work with nats

--- a/app/video/video.html
+++ b/app/video/video.html
@@ -15,7 +15,7 @@
 
     <div ng-if="vm.canOperateVDS" class="legend-popup" style="background: transparent;" layout="row" ng-init="transparentButton = true"
          ng-class="{'transparent-legend':transparentButton && !showControls}"
-         ng-show="vm.sensorValues[vm.vds_name + '_device_status'].value === 'ok'" >
+         ng-show="vm.sensorValues['anc_' + vm.vds_name + '_device_status'].value === 'ok'" >
         <md-button flex style="pointer-events: auto;" md-theme="{{themePrimaryButtons}}" ng-init="showControls = true" ng-click="showControls = !showControls"
                    ng-mouseenter="transparentButton = false" ng-mouseleave="transparentButton = true" class="md-fab md-mini md-primary">
             <md-icon class="fa" ng-if="!showControls" md-font-icon="fa-caret-up"></md-icon>
@@ -25,8 +25,8 @@
             <div md-theme="{{themePrimaryButtons}}" class="video-pan-controls" layout="row">
                 <div layout="column" layout-align="end center">
                     <div flex layout="column" style="width: 100%">
-                        <div layout="row"><span flex>Pan: </span><span>{{vm.sensorValues[vm.vds_name + '_pan_position'].value}}</span></div>
-                        <div layout="row"><span flex>Tilt: </span><span>{{vm.sensorValues[vm.vds_name + '_tilt_position'].value}}</span></div>
+                        <div layout="row"><span flex>Pan: </span><span>{{vm.sensorValues['anc_' + vm.vds_name + '_pan_position'].value}}</span></div>
+                        <div layout="row"><span flex>Tilt: </span><span>{{vm.sensorValues['anc_' + vm.vds_name + '_tilt_position'].value}}</span></div>
                         <div layout="row"><span flex>Last Go To Preset: </span><span>{{vm.lastPreset ? vm.lastPreset : 'None'}}</span></div>
                     </div>
                     <div layout="row">
@@ -93,9 +93,9 @@
     </div>
 
     <div layout="row" layout-align="start center" class="floodlights-button" md-theme="{{themePrimaryButtons}}">
-        <span>Floodlights {{vm.sensorValues[vm.vds_name + '_flood_lights_on'].value? 'on' : 'off'}}</span>
-        <md-switch ng-disabled="!vm.sensorValues[vm.vds_name + '_flood_lights_on'].value"
-                   ng-model="vm.sensorValues[vm.vds_name + '_flood_lights_on'].value"
+        <span>Floodlights {{vm.sensorValues['anc_' + vm.vds_name + '_flood_lights_on'].value? 'on' : 'off'}}</span>
+        <md-switch ng-disabled="!vm.sensorValues['anc_' + vm.vds_name + '_flood_lights_on'].value"
+                   ng-model="vm.sensorValues['anc_' + vm.vds_name + '_flood_lights_on'].value"
                    ng-click="vm.toggleFloodLights()">
         </md-switch>
     </div>
