removed experimental and unused displays for activity and subarray health

--- a/app/activity/activity.html
+++ b/app/activity/activity.html
@@ -1,3 +1,6 @@
+<!-- *******************************************************************
+TODO: WARNING THIS DISPLAY WAS EXPERIMENTAL AND IS NOT USED ANYMORE
+******************************************************************* -->
 <div ng-controller="ActivityCtrl as vm" layout="column" class="md-whiteframe-z1" md-theme="{{$root.themePrimary}}"
     style="margin: 8px; position: relative" flex>
     <md-toolbar class="widget-toolbar md-whiteframe-z1" layout="row" layout-align="center center" style="padding: 0 8px">
