--- a/app/health/subarray-health/subarray-health.html
+++ b/app/health/subarray-health/subarray-health.html
@@ -1,3 +1,6 @@
+<!-- *******************************************************************
+TODO: WARNING THIS DISPLAY WAS EXPERIMENTAL AND IS NOT USED ANYMORE
+******************************************************************* -->
 <div flex style="min-width: 600px; min-height: 600px;" ng-controller="SubarrayHealthCtrl as vm" layout="columnd">
     <div class="legend-popup" style="background: transparent; pointer-events: none;" layout="row" ng-init="transparentLegend = true"
          ng-class="{'transparent-legend':transparentLegend && !showLegend}">
@@ -17,7 +20,7 @@
             <div layout="row" layout-align="start center"><div class="color-patch inactive-child" title="Black"></div><span>CAM Sensor Error</span></div>
         </div>
     </div>
-    <subarray-health-map style="overflow: hidden" redraw-charts="vm.redraw"></subarray-health-map>
+    <!-- <subarray-health-map style="overflow: hidden" redraw-charts="vm.redraw"></subarray-health-map> -->
 
     <div class="treemap-tooltip" style="visibility: hidden; background-color: #ffffff"></div>
 </div>
