--- a/app/widgets/activity/activity-widget.html
+++ b/app/widgets/activity/activity-widget.html
@@ -1,3 +1,6 @@
+<!-- *******************************************************************
+TODO: WARNING THIS DISPLAY WAS EXPERIMENTAL AND IS NOT USED ANYMORE
+******************************************************************* -->
 <div ng-controller="ActivityWidgetCtrl as vm" layout="column" class="md-whiteframe-z1"
     md-theme="{{$root.themePrimary}}" style="margin: 32px" flex>
     <md-toolbar class="widget-toolbar md-whiteframe-z1" layout="row" layout-align="center center">
