--- a/index.html
+++ b/index.html
@@ -85,7 +85,6 @@
 <script src="app/d3/receptor-health-force.js"></script>
 <script src="app/d3/receptor-health-sunburst-map.js"></script>
 <script src="app/d3/status-single-level-tree-map.js"></script>
-<script src="app/d3/subarray-health-map.js"></script>
 <script src="app/d3/navigation-pie.js"></script>
 <script src="app/d3/timeline.js"></script>
 
@@ -103,7 +102,6 @@
 <script src="app/health/receptor-pointing/receptor-pointing.js"></script>
 <script src="app/health/custom-health/custom-health.js"></script>
 <script src="app/health/config-health-view/config-health-view.js"></script>
-<script src="app/health/subarray-health/subarray-health.js"></script>
 <script src="app/sensor-graph/sensor-graph.js"></script>
 <script src="app/sensor-list/sensor-list.js"></script>
 <script src="app/sensor-groups/sensor-groups.js"></script>
@@ -112,7 +110,6 @@
 <script src="app/alarms/alarms-notify.js"></script>
 <script src="app/widgets/navigation/navigation-widget.js"></script>
 <script src="app/widgets/apod/apod-widget.js"></script>
-<script src="app/widgets/activity/activity-widget.js"></script>
 <script src="app/scheduler/scheduler-home.js"></script>
 <script src="app/scheduler/schedule-block-drafts/schedule-block-drafts.js"></script>
 <script src="app/scheduler/subarrays-draft-assignment/subarrays-draft-assignment.js"></script>
@@ -128,7 +125,6 @@
 <script src="app/device-status/device-status.js"></script>
 <script src="app/gui-links/gui-links.js"></script>
 <script src="app/instrumental-config/instrumental-config.js"></script>
-<script src="app/activity/activity.js"></script>
 <script src="app/reports/utilisation-report.js"></script>
 <!-- Add New Component JS Above -->
 
@@ -167,9 +163,9 @@
                         <div class="menu-item" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('customHealth')">
                             <md-button flex><span class="fa fa-heartbeat"></span><span>Custom Health</span></md-button>
                         </div>
-                        <div class="menu-item" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('activity')">
+                        <!-- <div class="menu-item" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('activity')">
                             <md-button flex><span class="fa fa-dashboard"></span><span>System Activity</span></md-button>
-                        </div>
+                        </div> -->
                     </md-item-content>
                 </md-item>
                 <md-item>
