--- a/app/widgets/navigation/navigation-widget-blocks.html
+++ b/app/widgets/navigation/navigation-widget-blocks.html
@@ -40,7 +40,7 @@
         <md-toolbar class="md-whiteframe-z1 md-toolbar-tools-medium"><span flex>Health & Alarms</span></md-toolbar>
         <div flex class="md-whiteframe-z1 nav-widget-button-container" md-theme="{{$root.themePrimaryButtons}}" layout="column">
             <md-button flex class="md-raised md-primary" ng-click="$root.stateGo('health')" layout="row"><span class="fa fa-heart"></span><span flex>Top Health</span></md-button>
-            <md-button flex class="md-raised md-primary" ng-click="$root.stateGo('customHealth')" layout="row"><span class="fa fa-heartbeat"></span><span flex>Custom Health</span></md-button>
+            <!-- <md-button flex class="md-raised md-primary" ng-click="$root.stateGo('customHealth')" layout="row"><span class="fa fa-heartbeat"></span><span flex>Custom Health</span></md-button> -->
             <md-button flex class="md-raised md-primary" ng-click="$root.stateGo('alarms')" layout="row"><span class="fa fa-warning"></span><span flex>Alarms</span></md-button>
             <!-- <md-button flex class="md-raised md-primary" ng-click="$root.stateGo('activity')" layout="row"><span class="fa fa-dashboard"></span><span flex>Activity</span></md-button> -->
         </div>
