--- a/index.html
+++ b/index.html
@@ -158,9 +158,9 @@
                         <div class="menu-item menu-item-indented" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('receptorHealth')">
                             <md-button flex><span class="fa fa-th-large"></span><span>Receptor Health</span></md-button>
                         </div>
-                        <div class="menu-item" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('customHealth')">
+                        <!-- <div class="menu-item" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('customHealth')">
                             <md-button flex><span class="fa fa-heartbeat"></span><span>Custom Health</span></md-button>
-                        </div>
+                        </div> -->
                         <!-- <div class="menu-item" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('activity')">
                             <md-button flex><span class="fa fa-dashboard"></span><span>System Activity</span></md-button>
                         </div> -->
